--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "platinum-elements": "PolymerElements/platinum-elements#1.0.1",
     "neon-elements": "PolymerElements/neon-elements#1.0.0",
     "page": "visionmedia/page.js#~1.6.3",
-    "ace-min-noconflict": "~1.1.9"
+    "ace-min-noconflict": "~1.1.9",
+    "iron-icon": "PolymerElements/iron-icon#~1.0.2"
   },
   "devDependencies": {
     "web-component-tester": "*",
