--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "neon-elements": "PolymerElements/neon-elements#1.0.0",
     "page": "visionmedia/page.js#~1.6.3",
     "ace-min-noconflict": "~1.1.9",
-    "iron-icon": "PolymerElements/iron-icon#~1.0.2"
+    "iron-icon": "PolymerElements/iron-icon#~1.0.2",
+    "js-base64": "~2.1.8"
   },
   "devDependencies": {
     "web-component-tester": "*",
