--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,9 @@
     "page": "visionmedia/page.js#~1.6.3",
     "ace-min-noconflict": "~1.1.9",
     "iron-icon": "PolymerElements/iron-icon#~1.0.2",
-    "google-chart": "GoogleWebComponents/google-chart#1.0.0"
+    "google-chart": "GoogleWebComponents/google-chart#1.0.0",
+    "paper-dialog": "PolymerElements/paper-dialog#~1.0.1",
+    "paper-fab": "PolymerElements/paper-fab#~1.0.3"
   },
   "devDependencies": {
     "web-component-tester": "*",
