--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_afa9cea1b82d_key -iv $encrypted_afa9cea1b82d_iv
   -in service-account.json.enc -out service-account.json -d
 
+script: true
+
 after_success:
 - curl https://sdk.cloud.google.com | CLOUDSDK_CORE_DISABLE_PROMPTS=1 $SHELL
 - gcloud -q components install preview
