--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ before_install:
 script: true
 
 after_success:
+- npm install --global bower
+- bower install
 - curl https://sdk.cloud.google.com | CLOUDSDK_CORE_DISABLE_PROMPTS=1 $SHELL
 - ~/google-cloud-sdk/bin/gcloud -q components update preview
 - ~/google-cloud-sdk/bin/gcloud -q components update preview app
