Formatting and making JSHint happier

--- a/.jshintrc
+++ b/.jshintrc
@@ -7,7 +7,7 @@
     "freeze"        : true,
     "immed"         : true,
     "latedef"       : true,
-    "newcap"        : true,
+    "newcap"        : false,
     "noarg"         : true,
     "noempty"       : true,
     "nonbsp"        : true,
@@ -16,7 +16,7 @@
     "quotmark"      : true,
     "undef"         : true,
     "unused"        : true,
-    "strict"        : true,
+    "strict"        : false,
     "maxparams"     : 5,
     "maxdepth"      : 4,
     "maxstatements" : false,
