Add charts for displaying skills and results
* add ChartJs dependency
* create element for displaying a chart out of SkillWeights
* add skill polygon to challenge detail page
* some styling improvements

--- a/.jshintrc
+++ b/.jshintrc
@@ -74,6 +74,7 @@
 		"console" : false,
 		"page"    : false,
 		"Polymer" : false,
-		"util"    : true
+		"util"    : true,
+		"Chart"   : true
 	}
 }
