--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "paper-dialog": "PolymerElements/paper-dialog#~1.0.1",
     "paper-fab": "PolymerElements/paper-fab#~1.0.3",
     "paper-tabs": "PolymerElements/paper-tabs#~1.0.1",
-    "paper-menu-button": "PolymerElements/paper-menu-button#~1.0.2"
+    "paper-menu-button": "PolymerElements/paper-menu-button#~1.0.2",
+    "Chart.js": "~1.0.2"
   },
   "devDependencies": {
     "web-component-tester": "*",
