Add form to create a new task * add bower dependency for markdown support * page to create task * form to create a code task * create component to render markdown text * display instructions as markdown on task detail page

--- a/.jshintrc
+++ b/.jshintrc
@@ -75,6 +75,7 @@
 		"page"    : false,
 		"Polymer" : false,
 		"util"    : true,
-		"Chart"   : true
+		"Chart"   : true,
+		"markdown": true
 	}
 }
