--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "paper-tabs": "PolymerElements/paper-tabs#~1.0.1",
     "paper-menu-button": "PolymerElements/paper-menu-button#~1.0.2",
     "Chart.js": "~1.0.2",
+    "markdown": "~0.5.0",
     "iron-ajax": "PolymerElements/iron-ajax#~1.0.4",
     "paper-progress": "PolymerElements/paper-progress#~1.0.2"
   },
