Markdown: switch to a new library, add syntax highlighting

--- a/.jshintrc
+++ b/.jshintrc
@@ -75,7 +75,6 @@
 		"page"    : false,
 		"Polymer" : false,
 		"util"    : true,
-		"Chart"   : true,
-		"markdown": true
+		"Chart"   : true
 	}
 }
