--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "paper-tabs": "PolymerElements/paper-tabs#~1.0.1",
     "paper-menu-button": "PolymerElements/paper-menu-button#~1.0.2",
     "Chart.js": "~1.0.2",
-    "markdown": "~0.5.0",
+    "marked": "~0.3.5",
+    "highlightjs": "~8.8.0",
     "iron-ajax": "PolymerElements/iron-ajax#~1.0.4",
     "paper-progress": "PolymerElements/paper-progress#~1.0.2"
   },
