--- a/bower.json
+++ b/bower.json
@@ -2,18 +2,21 @@
   "name": "app",
   "private": true,
   "dependencies": {
-    "iron-elements": "PolymerElements/iron-elements#~1.0",
-    "paper-elements": "PolymerElements/paper-elements#~1.0",
-    "platinum-elements": "PolymerElements/platinum-elements#~1.0",
-    "neon-elements": "PolymerElements/neon-elements#~1.0",
-    "page": "visionmedia/page.js#~1.6.3",
-    "ace-min-noconflict": "~1.1.9",
     "Chart.js": "~1.0.2",
+    "ace-min-noconflict": "~1.1.9",
+    "highlightjs": "~8.8.0",
+    "iron-elements": "PolymerElements/iron-elements#~1.0.4",
     "marked": "~0.3.5",
-    "highlightjs": "~8.8.0"
+    "neon-elements": "PolymerElements/neon-elements#~1.0.0",
+    "page": "visionmedia/page.js#~1.6.3",
+    "paper-elements": "PolymerElements/paper-elements#~1.0.5",
+    "platinum-elements": "PolymerElements/platinum-elements#~1.2.0"
   },
   "devDependencies": {
     "web-component-tester": "*",
     "test-fixture": "PolymerElements/test-fixture#^1.0.0"
+  },
+  "resolutions": {
+    "platinum-sw": "^1.2.0"
   }
 }
