--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "neon-elements": "PolymerElements/neon-elements#~1.0.0",
     "page": "visionmedia/page.js#~1.6.3",
     "paper-elements": "PolymerElements/paper-elements#~1.0.5",
-    "platinum-elements": "PolymerElements/platinum-elements#~1.2.0"
+    "platinum-elements": "PolymerElements/platinum-elements#~1.2.0",
+    "sockjs": "^0.3.4"
   },
   "devDependencies": {
     "web-component-tester": "*",
