--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,9 @@
     "page": "visionmedia/page.js#~1.6.3",
     "paper-elements": "PolymerElements/paper-elements#~1.0.5",
     "platinum-elements": "PolymerElements/platinum-elements#~1.2.0",
-    "sockjs": "^0.3.4"
+    "sockjs": "^0.3.4",
+    "paper-date-picker": "polymer-paper-date-picker#~1.1.2",
+    "paper-time-picker": "~1.1.1"
   },
   "devDependencies": {
     "web-component-tester": "*",
