--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "platinum-elements": "PolymerElements/platinum-elements#~1.2.0",
     "sockjs": "^0.3.4",
     "paper-date-picker": "polymer-paper-date-picker#~1.1.2",
-    "paper-time-picker": "~1.1.1"
+    "paper-time-picker": "~1.1.1",
+    "web-component-tester": "Polymer/web-component-tester#^4.2.2"
   },
   "devDependencies": {
     "web-component-tester": "*",
