--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "sockjs": "^0.3.4",
     "paper-date-picker": "polymer-paper-date-picker#~1.1.2",
     "paper-time-picker": "~1.1.1",
-    "web-component-tester": "Polymer/web-component-tester#^4.2.2"
+    "web-component-tester": "Polymer/web-component-tester#^4.2.2",
+    "gold-elements": "~1.0.1"
   },
   "devDependencies": {
     "web-component-tester": "*",
