--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "paper-date-picker": "polymer-paper-date-picker#~1.1.2",
     "paper-time-picker": "~1.1.1",
     "web-component-tester": "Polymer/web-component-tester#^4.2.2",
-    "gold-elements": "~1.0.1"
+    "gold-elements": "~1.0.1",
+    "vaadin-grid": "^1.0.0"
   },
   "devDependencies": {
     "web-component-tester": "*",
