--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "paper-time-picker": "~1.1.1",
     "web-component-tester": "Polymer/web-component-tester#^4.2.2",
     "gold-elements": "~1.0.1",
-    "vaadin-grid": "^1.0.0"
+    "vaadin-grid": "^1.0.0",
+    "vaadin-combo-box": "~1.1.0-beta1"
   },
   "devDependencies": {
     "web-component-tester": "*",
