--- a/.travis.yml
+++ b/.travis.yml
@@ -8,20 +8,21 @@ notifications:
 before_install:
 - $(! $TRAVIS_SECURE_ENV_VARS) || openssl aes-256-cbc -K $encrypted_afa9cea1b82d_key -iv $encrypted_afa9cea1b82d_iv
   -in service-account.json.enc -out service-account.json -d
+
+install:
 - npm install --global bower jshint gulp-cli
 - bower install
 - npm install
-- gulp
-- rm -rf node_modules app/bower_components
-- rm -rf bower_components/prism/tests
 
 script:
 - find app -regextype posix-extended -type d -regex 'app/bower_components' -prune -o -type f -regex '.*(html|js|json)' -print | xargs jshint --extract=auto
+- gulp
 
-after_success: ./git-lfs.sh
+after_success:
+- ./git-lfs.sh
+- rm -rf node_modules app/bower_components
 
 deploy:
   provider: gae
   project: coduno
   skip_cleanup: true
-  verbosity: debug
