--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "require-dir": "^0.3.0",
     "run-sequence": "^1.0.2",
     "vulcanize": ">= 1.4.2",
-    "web-component-tester": "^4.0.0"
+    "web-component-tester": "^4.0.0",
+    "jshint": "~2.9.2",
+    "gulp-jshint": "~2.0.1"
   },
   "scripts": {
     "test": "gulp test:local",
