Do not install JSHint on Travis globally

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
   -in service-account.json.enc -out service-account.json -d
 
 install:
-- npm install --global bower jshint gulp-cli
+- npm install --global bower gulp-cli
 - bower install
 - npm install
 
