--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ notifications:
 before_install:
 - $(! $TRAVIS_SECURE_ENV_VARS) || (openssl aes-256-cbc -K $encrypted_e1ab82f12a98_key -iv $encrypted_e1ab82f12a98_iv
   -in secrets.tar.enc -out secrets.tar -d && tar xvf secrets.tar )
-- if [ "$TRAVIS_BRANCH" == "master" ]; then tar xvf secrets-prod.tar; else tar xvf secrets-staging.tar; fi; rm secrets*.tar
+- if [ "$TRAVIS_BRANCH" == "master" ]; then tar xvf secrets-prod.tar; else tar xvf secrets-lab.tar; fi; rm secrets*.tar
 - npm install --global gulp-cli
 
 script: gulp
@@ -25,7 +25,7 @@ deploy:
     on:
       branch: master
   - provider: gae
-    project: coduno-staging
+    project: coduno-lab
     skip_cleanup: true
     on:
       branch: dev
