Travis: fix PRs from other repositories

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ notifications:
 before_install:
 - $(! $TRAVIS_SECURE_ENV_VARS) || (openssl aes-256-cbc -K $encrypted_e1ab82f12a98_key -iv $encrypted_e1ab82f12a98_iv
   -in secrets.tar.enc -out secrets.tar -d && tar xvf secrets.tar )
-- if [ "$TRAVIS_BRANCH" == "master" ]; then tar xvf secrets-prod.tar; else tar xvf secrets-lab.tar; fi; rm secrets*.tar
+- $(! $TRAVIS_SECURE_ENV_VARS) || ( if [ "$TRAVIS_BRANCH" == "master" ]; then tar xvf secrets-prod.tar; else tar xvf secrets-lab.tar; fi; rm secrets*.tar )
 
 script: npm run build
 
