--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "devDependencies": {
+    "bower": "^1.7.9",
     "browser-sync": "^2.7.7",
     "connect-history-api-fallback": "^1.1.0",
     "del": "^2.0.2",
@@ -11,9 +12,11 @@
     "gulp-cache": "^0.4.0",
     "gulp-changed": "^1.0.0",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-google-webfonts": "0.0.12",
     "gulp-html-extract": "^0.1.0",
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.2.1",
+    "gulp-jshint": "~2.0.1",
     "gulp-load-plugins": "^1.1.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.2",
@@ -23,6 +26,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^2.1.0",
     "gulp-vulcanize": "^6.0.0",
+    "jshint": "~2.9.2",
     "merge-stream": "^1.0.0",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.0.2",
