--- a/app.yaml
+++ b/app.yaml
@@ -36,6 +36,14 @@ handlers:
     http_headers:
       strict-transport-security: max-age=15552000
 
+  - url: /fonts/(.+)
+    static_files: dist/fonts/\1
+    upload: dist/fonts/(.+)
+    secure: always
+    expiration: 4d
+    http_headers:
+      strict-transport-security: max-age=15552000
+
   - url: /images/(.+)
     static_files: dist/images/\1
     upload: dist/images/(.+)
@@ -59,4 +67,4 @@ handlers:
     expiration: 4d
     http_headers:
       strict-transport-security: max-age=15552000
-      link: '</bower_components/webcomponentsjs/webcomponents-lite.min.js>; rel=preload; as=script, </elements/elements.html>; rel=preload; </styles/coduno.css>; rel=preload; as=style, </styles/main.css>; rel=preload; as=style, </scripts/util.js>; rel=preload; as=script, </images/logo.svg>; rel=preload; as=image'
+      link: '</bower_components/webcomponentsjs/webcomponents-lite.min.js>; rel=preload; as=script, </elements/elements.html>; rel=preload; </styles/coduno.css>; rel=preload; as=style, </styles/main.css>; rel=preload; as=style, </scripts/util.js>; rel=preload; as=script, </images/logo.svg>; rel=preload; as=image, </fonts/fonts.css>; rel=preload; as=style'
