--- a/bower.json
+++ b/bower.json
@@ -2,29 +2,30 @@
   "name": "app",
   "private": true,
   "dependencies": {
-    "Chart.js": "~1.0.2",
-    "ace-min-noconflict": "~1.1.9",
-    "highlightjs": "~8.8.0",
-    "iron-elements": "PolymerElements/iron-elements#~1.0.4",
-    "marked": "~0.3.5",
-    "neon-elements": "PolymerElements/neon-elements#~1.0.0",
-    "page": "visionmedia/page.js#~1.6.3",
-    "paper-elements": "PolymerElements/paper-elements#~1.0.5",
-    "platinum-elements": "PolymerElements/platinum-elements#~1.2.0",
-    "sockjs": "^0.3.4",
+    "paper-elements": "PolymerElements/paper-elements#^1.0.7",
+    "iron-elements": "PolymerElements/iron-elements#^1.0.10",
+    "neon-elements": "PolymerElements/neon-elements#^1.0.0",
+    "platinum-elements": "PolymerElements/platinum-elements#^2.0.0",
+    "web-component-tester": "Polymer/web-component-tester#^4.2.2",
     "paper-date-picker": "polymer-paper-date-picker#~1.1.2",
     "paper-time-picker": "~1.1.1",
-    "web-component-tester": "Polymer/web-component-tester#^4.2.2",
+    "Chart.js": "^2.1.4",
+    "ace-min-noconflict": "^1.1.9",
+    "highlightjs": "^9.4.0",
+    "marked": "^0.3.5",
+    "page": "^1.7.1",
+    "sockjs": "^0.3.4",
     "gold-elements": "~1.0.1",
     "vaadin-grid": "^1.0.0",
     "paper-listbox": "polymerelements/paper-listbox#^1.1.2",
-    "google-fonts": "*"
+    "google-fonts": "*",
+    "paper-datatable": "^0.9.8"
   },
   "devDependencies": {
     "web-component-tester": "*",
     "test-fixture": "PolymerElements/test-fixture#^1.0.0"
   },
   "resolutions": {
-    "platinum-sw": "^1.2.0"
+    "paper-styles": "^1.1.4"
   }
 }
