--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,7 @@
     "test-fixture": "PolymerElements/test-fixture#^1.0.0"
   },
   "resolutions": {
-    "paper-styles": "^1.1.4"
+    "paper-styles": "^1.1.4",
+    "polymer": "^1.5.0"
   }
 }
